Fix too long chart/deployment name #16

--- a/src/ui/src/app/chart-item/chart-item.component.scss
+++ b/src/ui/src/app/chart-item/chart-item.component.scss
@@ -28,7 +28,7 @@ $chart-item-content-height: 150px;
 
   &-logo {
     height: 100%;
-    width: 100px;
+    width: 80px;
     background-color: white;
     display: flex;
     align-items: center;
@@ -41,7 +41,7 @@ $chart-item-content-height: 150px;
       justify-content: center;
     }
     img {
-      width: 60%;
+      width: 70%;
       max-height: 100%;
     }
   }
@@ -53,7 +53,8 @@ $chart-item-content-height: 150px;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-
+    word-wrap: break-word;
+    overflow: hidden;
     &__title {
       a { color: white; }
       margin: 0;
